--- a/Lesson_with_solutions.ipynb
+++ b/Lesson_with_solutions.ipynb
@@ -494,14 +494,7 @@
    "metadata": {},
    "source": [
     "## Partitioning Complex Events\n",
-    "\n",
-    "Let's take some time and review questions like those from the [dsc-law-of-total-probability-lab](https://github.com/learn-co-curriculum/dsc-law-of-total-probability-lab).  \n",
-    "\n",
-    "According to the CDC, [14% of Americans currently smoke, 15.8% of males and 12.2% of females](https://www.cdc.gov/tobacco/data_statistics/fact_sheets/adult_data/cig_smoking/index.htm). According the the American Lung Association, [men who smoke are 23 times more likely to smoke then never-smokers, and women are 13 times as likely](https://www.lung.org/lung-health-and-diseases/lung-disease-lookup/lung-cancer/resource-library/lung-cancer-fact-sheet.html). The American Cancer Society estimates that [the lifetime risk of developing lung cancer is 6.85%](https://www.cancer.org/cancer/cancer-basics/lifetime-probability-of-developing-or-dying-from-cancer.html). Currently, the census estimates that [women are 50.8% of the population](https://www.census.gov/quickfacts/fact/table/US/PST045218). \n",
-    "\n",
-    "What is the risk of lung cancer for non-smokers? Non-smoker males? Non-smoker females?\n",
-    "\n",
-    "> To learn more about lung-cancer risks for non-smokers, see https://www.cancer.org/latest-news/why-lung-cancer-strikes-nonsmokers.html."
+    "\n"
    ]
   },
   {
@@ -518,6 +511,98 @@
    "metadata": {},
    "source": [
     "## Summary\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Challenge Problem\n",
+    "\n",
+    "Let's take some time and review questions like those from the [dsc-law-of-total-probability-lab](https://github.com/learn-co-curriculum/dsc-law-of-total-probability-lab).  \n",
+    "\n",
+    "According to the CDC, [14% of Americans currently smoke, 15.8% of males and 12.2% of females](https://www.cdc.gov/tobacco/data_statistics/fact_sheets/adult_data/cig_smoking/index.htm). According the the American Lung Association, [men who smoke are 23 times more likely to smoke then never-smokers, and women are 13 times as likely](https://www.lung.org/lung-health-and-diseases/lung-disease-lookup/lung-cancer/resource-library/lung-cancer-fact-sheet.html). The American Cancer Society estimates that [the lifetime risk of developing lung cancer is 6.85% for males and 5.95% for females](https://www.cancer.org/cancer/cancer-basics/lifetime-probability-of-developing-or-dying-from-cancer.html). Currently, the census estimates that [women are 50.8% of the population](https://www.census.gov/quickfacts/fact/table/US/PST045218). \n",
+    "\n",
+    "What is the risk of lung cancer for non-smokers? Non-smoker males? Non-smoker females?\n",
+    "\n",
+    "> To learn more about lung-cancer risks for non-smokers, see https://www.cancer.org/latest-news/why-lung-cancer-strikes-nonsmokers.html."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A:\n",
+    "\n",
+    "$P(\\text{Lung_Cancer | Male}) = P(\\text{Lung_Cancer | NonSmoking_Male}) \\cdot P(\\text{NonSmoking_Male}) + P(\\text{Lung_Cancer | Smoking_Male}) \\cdot P(\\text{Smoking_Male})$\n",
+    "\n",
+    "We also know that male smokers are 23 times more likely to develop lung cancer then there counterparts:\n",
+    "\n",
+    "$P(\\text{Lung_Cancer | Smoking_Male})= 23 \\cdot P(\\text{Lung_Cancer | NonSmoking_Male})$  \n",
+    "\n",
+    "Substituting we have:  \n",
+    "\n",
+    "$.0685 = P(\\text{Lung_Cancer | NonSmoking_Male}) \\cdot (1-.158) + 23 \\cdot P(\\text{Lung_Cancer | NonSmoking_Male}) \\cdot (.158)$  \n",
+    "$.0685 = P(\\text{Lung_Cancer | NonSmoking_Male}) \\cdot (.842) + 23 \\cdot P(\\text{Lung_Cancer | NonSmoking_Male}) \\cdot (.158)$\n",
+    "$.0685 = 4.476 \\cdot P(\\text{Lung_Cancer | NonSmoking_Male})$\n",
+    "$0.015303842716711352 = P(\\text{Lung_Cancer | NonSmoking_Male})$\n",
+    "\n",
+    "So 23 times the risk for Smoking Males Would Give:\n",
+    "\n",
+    "$0.3519883824843611 = P(\\text{Lung_Cancer | Smoking_Male})$\n",
+    "\n",
+    "\n",
+    "Following a similar procedure for Females, results in a ~2.4% chance that a Non Smoking Female will develop lung cancer.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.015303842716711352"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Nonsmoking Males\n",
+    "(.0685 / (23*.158 + .842))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.024147727272727272"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Nonsmoking Females\n",
+    "(.0595 / (13*.122 + .878))"
    ]
   },
   {
@@ -544,7 +629,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.5"
   },
   "toc": {
    "base_numbering": 1,
