--- a/Mushroom_Preprocessing_Script.ipynb
+++ b/Mushroom_Preprocessing_Script.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +223,7 @@
        "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,11 +258,127 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = df[['edible-poisonous', 'bruises?', 'gill-spacing', 'stalk-shape']]"
+    "df = df[['edible-poisonous', 'bruises?', 'gill-spacing', 'stalk-shape',\n",
+    "        'stalk-color-above-ring', 'stalk-color-below-ring','gill-color']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>edible-poisonous</th>\n",
+       "      <th>bruises?</th>\n",
+       "      <th>gill-spacing</th>\n",
+       "      <th>stalk-shape</th>\n",
+       "      <th>stalk-color-above-ring</th>\n",
+       "      <th>stalk-color-below-ring</th>\n",
+       "      <th>gill-color</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>p</td>\n",
+       "      <td>t</td>\n",
+       "      <td>c</td>\n",
+       "      <td>e</td>\n",
+       "      <td>w</td>\n",
+       "      <td>w</td>\n",
+       "      <td>k</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>e</td>\n",
+       "      <td>t</td>\n",
+       "      <td>c</td>\n",
+       "      <td>e</td>\n",
+       "      <td>w</td>\n",
+       "      <td>w</td>\n",
+       "      <td>k</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>e</td>\n",
+       "      <td>t</td>\n",
+       "      <td>c</td>\n",
+       "      <td>e</td>\n",
+       "      <td>w</td>\n",
+       "      <td>w</td>\n",
+       "      <td>n</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>p</td>\n",
+       "      <td>t</td>\n",
+       "      <td>c</td>\n",
+       "      <td>e</td>\n",
+       "      <td>w</td>\n",
+       "      <td>w</td>\n",
+       "      <td>n</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>e</td>\n",
+       "      <td>f</td>\n",
+       "      <td>w</td>\n",
+       "      <td>t</td>\n",
+       "      <td>w</td>\n",
+       "      <td>w</td>\n",
+       "      <td>k</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  edible-poisonous bruises? gill-spacing stalk-shape stalk-color-above-ring  \\\n",
+       "0                p        t            c           e                      w   \n",
+       "1                e        t            c           e                      w   \n",
+       "2                e        t            c           e                      w   \n",
+       "3                p        t            c           e                      w   \n",
+       "4                e        f            w           t                      w   \n",
+       "\n",
+       "  stalk-color-below-ring gill-color  \n",
+       "0                      w          k  \n",
+       "1                      w          k  \n",
+       "2                      w          n  \n",
+       "3                      w          n  \n",
+       "4                      w          k  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
    ]
   },
   {
@@ -295,96 +411,9 @@
        "      <th>bruises?</th>\n",
        "      <th>gill-spacing</th>\n",
        "      <th>stalk-shape</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>p</td>\n",
-       "      <td>t</td>\n",
-       "      <td>c</td>\n",
-       "      <td>e</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>e</td>\n",
-       "      <td>t</td>\n",
-       "      <td>c</td>\n",
-       "      <td>e</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>e</td>\n",
-       "      <td>t</td>\n",
-       "      <td>c</td>\n",
-       "      <td>e</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>p</td>\n",
-       "      <td>t</td>\n",
-       "      <td>c</td>\n",
-       "      <td>e</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>e</td>\n",
-       "      <td>f</td>\n",
-       "      <td>w</td>\n",
-       "      <td>t</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  edible-poisonous bruises? gill-spacing stalk-shape\n",
-       "0                p        t            c           e\n",
-       "1                e        t            c           e\n",
-       "2                e        t            c           e\n",
-       "3                p        t            c           e\n",
-       "4                e        f            w           t"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>edible-poisonous</th>\n",
-       "      <th>bruises?</th>\n",
-       "      <th>gill-spacing</th>\n",
-       "      <th>stalk-shape</th>\n",
+       "      <th>stalk-color-above-ring</th>\n",
+       "      <th>stalk-color-below-ring</th>\n",
+       "      <th>gill-color</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -394,6 +423,9 @@
        "      <td>true</td>\n",
        "      <td>close</td>\n",
        "      <td>enlarging</td>\n",
+       "      <td>white</td>\n",
+       "      <td>white</td>\n",
+       "      <td>black</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -401,6 +433,9 @@
        "      <td>true</td>\n",
        "      <td>close</td>\n",
        "      <td>enlarging</td>\n",
+       "      <td>white</td>\n",
+       "      <td>white</td>\n",
+       "      <td>black</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -408,6 +443,9 @@
        "      <td>true</td>\n",
        "      <td>close</td>\n",
        "      <td>enlarging</td>\n",
+       "      <td>white</td>\n",
+       "      <td>white</td>\n",
+       "      <td>brown</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -415,6 +453,9 @@
        "      <td>true</td>\n",
        "      <td>close</td>\n",
        "      <td>enlarging</td>\n",
+       "      <td>white</td>\n",
+       "      <td>white</td>\n",
+       "      <td>brown</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -422,21 +463,31 @@
        "      <td>false</td>\n",
        "      <td>crowded</td>\n",
        "      <td>tapering</td>\n",
+       "      <td>white</td>\n",
+       "      <td>white</td>\n",
+       "      <td>black</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  edible-poisonous bruises? gill-spacing stalk-shape\n",
-       "0        poisonous     true        close   enlarging\n",
-       "1           edible     true        close   enlarging\n",
-       "2           edible     true        close   enlarging\n",
-       "3        poisonous     true        close   enlarging\n",
-       "4           edible    false      crowded    tapering"
+       "  edible-poisonous bruises? gill-spacing stalk-shape stalk-color-above-ring  \\\n",
+       "0        poisonous     true        close   enlarging                  white   \n",
+       "1           edible     true        close   enlarging                  white   \n",
+       "2           edible     true        close   enlarging                  white   \n",
+       "3        poisonous     true        close   enlarging                  white   \n",
+       "4           edible    false      crowded    tapering                  white   \n",
+       "\n",
+       "  stalk-color-below-ring gill-color  \n",
+       "0                  white      black  \n",
+       "1                  white      black  \n",
+       "2                  white      brown  \n",
+       "3                  white      brown  \n",
+       "4                  white      black  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -446,12 +497,25 @@
     "df['bruises?'] = df['bruises?'].map({'t':'true', 'f': 'false'})\n",
     "df['gill-spacing'] = df['gill-spacing'].map({'c':'close', 'w': 'crowded', 'd':'distant'})\n",
     "df['stalk-shape'] = df['stalk-shape'].map({'e':'enlarging', 't':'tapering'})\n",
+    "df['stalk-color-above-ring'] = df['stalk-color-above-ring'].map({'n':'brown','b':'buff',\n",
+    "                                                                 'c':'cinnamon','g':'gray',\n",
+    "                                                                 'o':'orange', 'p':'pink',\n",
+    "                                                                 'e':'red','w':'white','y':'yellow'\n",
+    "                                                                })\n",
+    "df['stalk-color-below-ring'] = df['stalk-color-below-ring'].map({'n':'brown','b':'buff',\n",
+    "                                                                 'c':'cinnamon','g':'gray',\n",
+    "                                                                 'o':'orange', 'p':'pink',\n",
+    "                                                                 'e':'red','w':'white','y':'yellow'})\n",
+    "df['gill-color'] = df['gill-color'].map({'k':'black','n':'brown',\n",
+    "                                         'b':'buff','h':'chocolate',\n",
+    "                                         'g':'gray', 'r':'green','o':'orange',\n",
+    "                                         'p':'pink','u':'purple','e':'red','w':'white','y':'yellow'})\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -461,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -612,7 +676,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.5"
   },
   "toc": {
    "base_numbering": 1,
